--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
     ],
     "content_scripts": [
         {
-            "matches": ["https://scombz.shibaura-it.ac.jp/lms/timetable"],
+            "matches": ["https://scombz.shibaura-it.ac.jp/lms/*"],
             "js": ["content.js"],
             "run_at": "document_start"
         }
